[metadata]
name = ParticleSeg3D
version = attr: particleseg3d.__version__
description = Scalable, out-of-the box segmentation of individual particles from mineral samples acquired with micro CT
long_description = file: README.md
long_description_content_type = text/markdown

author = Karol Gotkowski
author_email = karol.gotkowski@dkfz.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    tqdm
    SimpleITK
    zarr
    GeodisTK
    connected-components-3d
    numpy-indexed
    scikit-image
    acvl-utils
    natsort
    pytorch_lightning<=1.9.5
    nnUNet @ git+https://github.com/MIC-DKFZ/nnUNet.git@ParticleSeg3D
python_requires = >=3.8
include_package_data = True
; package_dir =
;     =particleseg3d

# add your package requirements here

; [options.packages.find]
; where = particleseg3d

[options.entry_points]
console_scripts =
    ps3d_inference = particleseg3d.inference.inference:main
    ps3d_tiff2zarr = particleseg3d.conversion.tiff2zarr:main
    ps3d_zarr2tiff = particleseg3d.conversion.zarr2tiff:main
    ps3d_tiff2nifti = particleseg3d.conversion.tiff2nifti:main
    ps3d_nifti2tiff = particleseg3d.conversion.nifti2tiff:main
    ps3d_train_preprocess = particleseg3d.train.preprocess:main

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
